--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,3 +41,12 @@ dependencies {
     implementation "com.github.parse-community.Parse-SDK-Android:ktx:1.23.1"
 }
 
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+}
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+}
